--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -1,14 +1,15 @@
----
 name: Basic Workflow
 
 on: [workflow_dispatch]
 
 jobs:
-  basic-workflow-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    basic-workflow-job:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-      - name: run a simple command (print a hello message)
-        run: echo "Hello this is a simple workflow running on Github Actions!"
+            - name: run a simple command (print a hello message)
+              run: |
+                  echo "Hello this is a simple workflow running on Github Actions!"
+                  echo "::notice:: Workflow executed successfully!"
