add demo workflow

--- a/.github/workflows/demoWorkflow.yaml
+++ b/.github/workflows/demoWorkflow.yaml
@@ -1,8 +1,16 @@
-# name "A simple demo workflow"
-# trigger = on: push to main
-# job running in selected environment (runs-on)
-# run the job "demo-job" on windows-latest
-# 2 steps:
-# 1. run node --version to print the Node.js version
-# 2. run npm --version to print the NPM version
-# commit and push
+name: A simple demo workflow
+on:
+    push:
+        branches: ['main']
+jobs:
+    demo-job:
+        runs-on: windows-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: check nodejs version
+              run: node --version
+
+            - name: check npm version
+              run: npm --version
