--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,4 +12,5 @@ jobs:
                   node-version: 20
                   cache: 'npm'
             - run: npm install
-            - run: npm run build
+            - run: npm run build --if-present
+            - run: npm test
