--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,6 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  cache: 'npm'
             - run: npm install
             - run: npm run build --if-present
-            - run: npm test
+            - run: npm run test --if-present
