--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,9 @@ jobs:
                   path: dist/
 
             - name: Deploy to Github Pages
-              uses: peaceiris/actions-gh-pages@v4
+              uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{secrets.GITHUB_TOKEN}}
                   publish_dir: dist
+                  user_name: github-actions
+                  user_email: github-actions@github.com
